--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -137,11 +137,9 @@ en:
   error_counter:
     one: "1 error"
     other: "%{count} errors"
-  id: "ID"
-  title: "Title"
-  des: "Description"
-  price: "Price"
-  img: "Image"
-  action: "Action"
   are_you_sure: "Are you sure?"
   sell_product: "Sell Product"
+  add_to_cart: "Add to cart"
+  show: "Show"
+  edit: "Modify"
+  delete: "Remove"
