--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,3 +151,6 @@ en:
   update: "Update"
   reviewers: "Reviewers"
   comment_not_found: "Comment not found!"
+  cmt_upd_s: "Comment was updated successful"
+  cmt_upd_f: "Comment was updated failed"
+  you_dont_like: "You dont like it"
