authorize and feedback task

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -154,3 +154,9 @@ en:
   cmt_upd_s: "Comment was updated successful"
   cmt_upd_f: "Comment was updated failed"
   you_dont_like: "You dont like it"
+  fb_create_success: "Feedback was created successful"
+  fb_destroy_success: "Feedback was destroy successful"
+  feedback: "Feedback"
+  feedback_subject: "Subject"
+  feedback_sender: "Sender"
+  feedback_sent_date: "Sent date"
