--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -160,3 +160,4 @@ en:
   feedback_subject: "Subject"
   feedback_sender: "Sender"
   feedback_sent_date: "Sent date"
+  user_not_found: "user not found"
