--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -160,5 +160,7 @@ en:
   feedback_subject: "Subject"
   feedback_sender: "Sender"
   feedback_sent_date: "Sent date"
-  user_not_found: "user not found"
   category: "Category"
+  user_not_found: "user not found"
+  go_to_shop: "Go to shop"
+  order: "Order"
