--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -179,3 +179,7 @@ en:
   user_not_found: "user not found"
   go_to_shop: "Go to shop"
   order: "Order"
+  sell_product: "Sell Product"
+  checkout: "Checkout"
+  payments: "Payments"
+  your_bill: "Your Bill"
